--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Makefile
 Makefile*
 travis_qmake_gcc_cpp98_boost_test_debug_and_release_gcov
 travis_qmake_gcc_cpp98_boost_test_debug_and_release_gcov_test
+debug/
+release/
