Move all gcno files from debug folder to root

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ travis_qmake_gcc_cpp98_boost_test_debug_and_release_gcov
 travis_qmake_gcc_cpp98_boost_test_debug_and_release_gcov_test
 debug/
 release/
+*.gcno
